--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "vue": "^2.6.14",
+    "vue-cli": "^2.9.6",
+    "vue-router": "^3.5.3"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-router": "^4.5.15"
   }
 }
