--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "install": "^0.13.0",
+    "npm": "^8.3.0",
+    "portal-vue": "^2.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -19,9 +22,9 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.6.0",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^7.0.1",
     "sass-loader": "^8.0.2"
   }
 }
