--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -6,3 +6,6 @@ HOST= VOTRE ADRESSE
 PROJECT= NOM DE LA BDD
 NAME= PSEUDO BDD
 PASSEWORD= MOT DE PASSE BDD
+
+# User.Js
+TIME_BLOCK="Duré de vérouillage en ms ("3600000" = 1h)"
