--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -8,4 +8,4 @@ NAME= PSEUDO BDD
 PASSEWORD= MOT DE PASSE BDD
 
 # User.Js
-TIME_BLOCK="Duré de vérouillage en ms ("3600000" = 1h)"
+TIME_BLOCK="Duré de vérouillage en ms"
